2004-05-30  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetreeprivate.h (FileTreePrivate::filetree_columns):
	Remove the G_GNUC_CONST attribute since in this function's case
	it doesn't gain us anything anyway.

	* src/translation.h (translate): Use G_GNUC_PURE rather than
	G_GNUC_CONST because the function depends on global memory.

2004-05-30  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/pcreshell.cc (Pattern::match): Use the symbolic constant
	PCRE_ERROR_NOMATCH instead of comparing with -1 directly.

2004-05-29  Daniel Elstner  <daniel.elstner@gmx.net>

	* ui/mainwindow.glade (button_preferences): Remove tool button.
	I'm not yet convinced that the "Quit" button should be removed
	too, because I like it large and easy to hit on :)

	* src/controller.cc (Controller::load_xml): No longer load
	"button_preferences" from the glade file.

2004-05-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* macros/misc.m4 (REGEXXER_PKG_PATH_PROG): There is no need to
	pass the [not found] argument to AC_PATH_PROG, since the default
	action is just right.
	* macros/pcre.m4 (PCRE_CHECK_VERSION): ditto.

2004-05-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* Makefile.am (ACLOCAL_AMFLAGS): Add ${ACLOCAL_FLAGS} as
	recommended by James Henstridge.

2004-05-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* Makefile.am (install-schemas): Don't use $^ since it probably
	isn't portable.
	(uninstall-schemas): ditto.

2004-05-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac (PCRE_CHECK_VERSION): Bump version requirement to
	libpcre 4.0.  Apparently the code required this version for quite
	some time now, but without configure checking for it.

2004-05-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/pcreshell.cc (Pattern::Pattern): Let's be paranoid and
	use g_new0() rather than plain g_new() to allocate ovector_.
	(Pattern::get_substring_bounds): More paranoia: assert that
	the index argument is within the allowed range.