@@ -33,7 +33,7 @@ AC_PATH_PROG([PCRE_CONFIG], [pcre-config])
 
 AS_IF([test "x$PCRE_CONFIG" = x],
 [
-AC_MSG_ERROR([[
+AC_MSG_FAILURE([[
 *** pcre-config is missing.  Please install your distribution's
 *** libpcre development package and then try again.
 ]])
@@ -41,12 +41,12 @@ AC_MSG_ERROR([[
 
 AC_MSG_CHECKING([[for libpcre >= ]$1])
 
-pcre_version_string=`$PCRE_CONFIG --version`
+pcre_version_string=`$PCRE_CONFIG --version 2>&5`
 
 d='@<:@0123456789@:>@'
 pcre_transform='s/^\('$d'\{1,\}\)\.\('$d'\{1,\}\)\.\{0,1\}\('$d'*\)$/\1 \\* 1000000 + \2 \\* 1000 + 0\3/p'
-pcre_required=`echo "$1" | sed -n "$pcre_transform"`
-pcre_version=`echo "$pcre_version_string" | sed -n "$pcre_transform"`
+pcre_required=`echo "$1" | sed -n "$pcre_transform" 2>&5`
+pcre_version=`echo "$pcre_version_string" | sed -n "$pcre_transform" 2>&5`
 
 AS_IF([eval "expr $pcre_version \\>= $pcre_required" >/dev/null 2>&5],
       [pcre_version_ok=yes],
@@ -56,19 +56,19 @@ AC_MSG_RESULT([${pcre_version_ok}])
 
 AS_IF([test "x$pcre_version_ok" = xno],
 [
-AC_MSG_ERROR([[
+AC_MSG_FAILURE([[
 *** libpcre ]$1[ or higher is required, but you only have
 *** version $pcre_version_string installed.  Please upgrade and try again.
 ]])
 ])
 
 AC_MSG_CHECKING([[PCRE_CFLAGS]])
-PCRE_CFLAGS=`$PCRE_CONFIG --cflags | sed 's,-I/usr/include$,,;s,-I/usr/include ,,g'`
+PCRE_CFLAGS=`$PCRE_CONFIG --cflags | sed 's,-I/usr/include$,,;s,-I/usr/include ,,g' 2>&5`
 AC_MSG_RESULT([${PCRE_CFLAGS}])
 AC_SUBST([PCRE_CFLAGS])
 
 AC_MSG_CHECKING([[PCRE_LIBS]])
-PCRE_LIBS=`$PCRE_CONFIG --libs | sed 's,-L/usr/lib$,,;s,-L/usr/lib ,,g'`
+PCRE_LIBS=`$PCRE_CONFIG --libs | sed 's,-L/usr/lib$,,;s,-L/usr/lib ,,g' 2>&5`
 AC_MSG_RESULT([${PCRE_LIBS}])
 AC_SUBST([PCRE_LIBS])
 ])
@@ -122,7 +122,7 @@ AC_CACHE_CHECK(
 
 AS_IF([test "x$pcre_cv_has_utf8_support" = xno],
 [
-AC_MSG_ERROR([[
+AC_MSG_FAILURE([[
 *** Sorry, the PCRE library installed on your system doesn't support
 *** UTF-8 encoding.  Please install a libpcre package which includes
 *** support for UTF-8.  Note that if you compile libpcre from source
